# Allocators

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: BufferizedAllocatorBench.cpp  CMakeLists.txt
cmake/: FindBenchmark.cmake
include/Allocators/: BufferizedAllocator.hpp  Def.hpp
tests/: BufferizedAllocatorTest.cpp  CMakeLists.txt
